# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

# The views and conclusions contained in the software and documentation are those
# of the authors and should not be interpreted as representing official policies,
# either expressed or implied, of the FreeBSD Project.


import json
import os
import re
import subprocess
import sys
from typing import Any, Dict

import requests
import yaml

REPOS = ("c2cgeoportal", "ngeo")

with open("ci/changelog.yaml") as cl_file:
    changelog = yaml.load(cl_file, Loader=yaml.SafeLoader)


def save():
    with open("ci/changelog.yaml", "w") as cl_file_w:
        cl_file_w.write(yaml.dump(changelog, Dumper=yaml.SafeDumper))


def output(cmd):
    with subprocess.Popen(cmd, stdout=subprocess.PIPE) as proc:
        if proc.stdout is None:
            return None
        return proc.stdout.read()


def get_any(repo, ref, section, url):
    if section not in changelog:
        changelog[section] = {}
    if repo not in changelog[section]:
        changelog[section][repo] = {}

    if ref in changelog[section][repo]:
        return False, changelog[section][repo][ref]

    token = (
        os.environ["GITHUB_TOKEN"]
        if "GITHUB_TOKEN" in os.environ
        else subprocess.check_output(["gopass", "gs/ci/github/token/gopass"]).decode().strip()
    )
    json_stuff = requests.get(
        url.format(repo, ref),
        headers={
            "Accept": "application/vnd.github.groot-preview+json",
            "Authorization": f"token {token}",
        },
    ).json()

    changelog[section][repo][ref] = json_stuff
    return True, json_stuff


def get_commit(repo, ref):
    dirty, commit = get_any(repo, ref, "commits", "https://api.github.com/repos/camptocamp/{}/commits/{}")
    if "sha" not in commit:
        print(f"Error on commit {ref}.")
        print(commit)
        sys.exit(1)

    for key in list(commit.keys()):
        if key not in ("parents", "sha"):
            del commit[key]
            dirty = True